# cvi_test_projects

./: .gitmodules  build_boot.sh  build_frm.sh  build_script.sh
boards/cv180xb_evb/: package.yaml
boards/cv180xb_evb/bootimgs/: boot
boards/cv180xb_evb/include/: usb_config.h
boards/cv180xb_evb/src/flash/: board_flash.c
boards/cv181xc_qfn/bootimgs/: boot
boards/cv181xc_qfn/configs/: config.yaml  partition_alios_spinor.xml
boards/cv181xc_qfn/include/: usb_config.h
boards/cv181xc_qfn/script/: aft_build.sh
components/aos/include/aos/: kernel.h
components/aos/src/: except.c
components/cherryusb/class/audio/: usbd_audio.c
components/cherryusb/class/cdc/: usb_cdc.h
components/cherryusb/class/hub/: usbh_hub.c
components/cherryusb/class/msc/: usb_msc.h
components/cherryusb/class/mtp/: usbd_mtp.c
components/cherryusb/class/video/: usbd_video.c  usbh_video.c
components/cherryusb/class/wireless/: usbd_rndis.c  (+1 more)
components/cherryusb/core/: usbd_core.c  usbd_core.h
components/chip_cv180x/: gcc_flash_128M.ld  gcc_flash_64M.ld  package.yaml
components/chip_cv181x/: gcc_flash.ld  gcc_flash_128M.ld  gcc_flash_64M.ld  package.yaml  package.yaml.boot
components/chip_cv181x/include/: soc.h
components/cli/src/: cli.c
components/cvi_mmf_sdk_cv181xx/: package.yaml
components/cvi_platform/: package.yaml
components/cvi_sensor/: package.yaml
components/cvi_sensor/sensor_i2c/: sensor_i2c.c
components/cvi_sensor/sms_sc201cs/: sc201cs_cmos.c  sc201cs_cmos_ex.h  sc201cs_cmos_param.h  sc201cs_sensor_ctl.c
components/cvi_sensor/sms_sc201cs_slave/: sc201cs_slave_cmos.c  sc201cs_slave_cmos_ex.h  sc201cs_slave_cmos_param.h  sc201cs_slave_sensor_ctl.c
components/cvi_sensor/sms_sc202cs/: sc202cs_cmos.c  sc202cs_cmos_param.h  sc202cs_sensor_ctl.c
components/cvi_sensor/sms_sc2331_slave/: sc2331_slave_cmos.c  sc2331_slave_cmos_ex.h  sc2331_slave_cmos_param.h  sc2331_slave_sensor_ctl.c
components/cvi_sensor/sms_sc3336/: sc3336_cmos.c  sc3336_cmos_param.h  sc3336_sensor_ctl.c
components/cvi_test/: package.yaml
components/debug/src/: debug_print.c
components/drv_snd_cv181x/: cv181x_snd.c
components/fatfs/: package.yaml
components/fatfs/src/: diskio.c
components/minialsa/: pcm.c
components/netmgr/: cli_ifconfig.c
components/partition/src/: partition_device.c  partition_emmc.c
components/rhino/: k_mm.c  k_mm_debug.c
components/rhino/include/: k_mm.h
components/ulog/: package.yaml
pack/: CMakeLists.txt  main.cpp
pack/boot0/v2_20240426/: boot0
pack/rc/: audiotest.pcm
pack/utils/: Encoder
pack_ota/: CMakeLists.txt  main.cpp  pack_upfirm.sh
solutions/usb_cam/: .sconsign.dblite  Makefile  make_upgrade.sh  package.yaml.turnkey  package.yaml.turnkey_180xb
solutions/usb_cam/application/: app_main.c
solutions/usb_cam/application/FaceEngine/: CMakeLists.txt  ComboRetrievalSystem.cpp  ComboRetrievalSystem.h  EngineDef.h  EngineStruct.h  FaceEngine.pro  FaceRetrievalSystem.cpp  FaceRetrievalSystem.h  FaceRetrievalSystem_base.h  FaceRetrievalSystem_dnn.cpp  FaceRetrievalSystem_dnn.h  FaceRetrievalSystem_h.cpp  FaceRetrievalSystem_h.h  FaceStruct.h  ImageProcessing.cpp  ImageProcessing.h  Matd.cpp  Matd.h  Pose.cpp  Pose.h  convert.cpp  convert.h  convertBayer2Y.cpp  convertBayer2Y.h  convertBayer2Y_cm.cpp  convertBayer2Y_cm.h  convertBayer2Y_cm_riscv.cpp  convertBayer2Y_cm_riscv.h  engine_inner_param.h  gammacorrection.cpp  gammacorrection.h  manageEnvironment.cpp  manageEnvironment.h  manageIRCamera.cpp  manageIRCamera.h  removebackground.cpp  removebackground.h  sha1.cpp  sha1.h
solutions/usb_cam/application/FaceEngine/AEngineLib/: BalingEngineLib.pro  ColorFaceDetector.h  GlassRemove.h  LinerGeometry.h  alloc.h  armCommon.h  armFaceDetector.h  armFaceDetectorTable.h  armFaceFeatureExtractor.h  armFaceFeatureExtractorTable.h  armFaceModelDetector.h  armFaceModelDetectorTable.h  armFeatureMatcher.h  armFeaturePattern.h  armPatternMatcher.h  armType.h  histogram.h  inpaint.h  macros.h  morph.h  type.h  util.h  wav_basic.h  wav_filters.h  wav_filters_extern.h  wav_gen.h  wav_trf.h  wave_denoise.h
solutions/usb_cam/application/FaceEngine/ChangeLog/: ChangeLog.xlsx
solutions/usb_cam/application/FaceEngine/Dic/: version.txt
solutions/usb_cam/application/FaceEngine/HEngineLib/: HCommon.h  HDetect.h  HEngine.h  HModeling.h  HPreprocess.h  Htypes.h  dictionary.h  dictionarydump.h  memory_map.h
solutions/usb_cam/application/FaceEngine/_dnn/: HAlign.cpp  HAlign.h  KDNN_EngineInterface.h  KDNN_EngineInterface_feat.cpp  KDNN_EngineInterface_liveness.cpp  KDNN_handValid.cpp  KDNN_handValid.h  UltraFace.cpp  UltraFace.hpp  cvimodel_proc.cpp  cvimodel_proc.h  detect.c  detect.cpp  detect.h  dic_manage.cpp  dic_manage.h  dnn.pri  esn.cpp  esn.h  esn_detection.cpp  esn_detection.h  feat.cpp  feat.h  hand_feat.c  hand_feat.h  livemn.cpp  livemn.h  livemnse.c  livemnse.cpp  livemnse.h  livemnse3.c  livemnse3.cpp  livemnse3.h  modeling.c  modeling.cpp  modeling.h  modeling_interface.cpp  modeling_interface.h  occ.cpp  occ.h  (+2 more)
solutions/usb_cam/application/FaceEngine/enn/: enn.pri  enn_activation.c  enn_activation.cpp  enn_activation.h  enn_conv.c  enn_conv.cpp  enn_conv.h  enn_eltwise.c  enn_eltwise.cpp  enn_eltwise.h  enn_global.c  enn_global.cpp  enn_global.h  enn_inner.c  enn_inner.cpp  enn_inner.h  enn_pad.c  enn_pad.cpp  enn_pad.h  enn_permute.c  enn_permute.cpp  enn_permute.h  enn_pool.c  enn_pool.cpp  enn_pool.h  enn_reshape.c  enn_reshape.cpp  enn_reshape.h  enn_softmax.c  enn_softmax.cpp  enn_softmax.h  enn_trans.c  enn_trans.cpp  enn_trans.h  version.txt
solutions/usb_cam/application/FaceEngine/ennq/: ennq.pri  ennq_activation.cpp  ennq_activation.h  ennq_conv.cpp  ennq_conv.h  ennq_global.cpp  ennq_global.h  ennq_inner.cpp  ennq_inner.h  ennq_normal.cpp  ennq_normal.h  ennq_pad.cpp  ennq_pad.h  ennq_pool.cpp  ennq_pool.h  ennq_quantize.cpp  ennq_quantize.h  ennq_seblock.cpp  ennq_seblock.h  ennq_slel.cpp  ennq_slel.h  ennq_trans.cpp  ennq_trans.h  version.txt
solutions/usb_cam/application/FaceEngine/hand/: HandRetrival_.cpp  HandRetrival_.h
(+278 files in other folders)
